# nwt

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: EnvInfo.cmake  PostBuild.cmake  ProjectOptions.cmake  QtSetup.cmake
docs/: design_outline.md  功能迭代.md
resource/: nwt.desktop
resource/Emotion/: Emotion.xml
resource/language/: en_US.ini  zh_CN.ini
src/: main.cpp
src/core/: ChatController.cpp  ChatController.h  DiscoveryService.cpp  DiscoveryService.h  LanguageKeys.h  LanguageManager.cpp  LanguageManager.h  MessageRouter.cpp  MessageRouter.h  PeerDirectory.cpp  PeerDirectory.h  PeerInfo.h  SettingsTypes.h  ShareManager.cpp  ShareManager.h  ShareTypes.h  StorageManager.cpp  StorageManager.h
src/ui/: AvatarHelper.cpp  AvatarHelper.h  ChatPanel.cpp  ChatPanel.h  ContactsSidebar.cpp  ContactsSidebar.h  EmojiImageHandler.cpp  EmojiImageHandler.h  EmotionPicker.cpp  EmotionPicker.h  MainWindow.cpp  MainWindow.h  PeerListModel.cpp  PeerListModel.h  ProfileDialog.cpp  ProfileDialog.h  RecentChatListModel.cpp  RecentChatListModel.h  RoleSelectionDialog.cpp  RoleSelectionDialog.h  SettingsDialog.cpp  SettingsDialog.h  ShareCenterDialog.cpp  ShareCenterDialog.h  StyleHelper.cpp  StyleHelper.h  ui_resources.qrc
src/ui/qss/: ChatPanel.qss  ContactPanel.qss  ProfileDialog.qss  SettingsDialog.qss
